# faugus-launcher

./: .SRCINFO  .gitignore  GUIDE.md  LICENSE  PKGBUILD  README.md  clean_pycache.sh  faugus-components.py  faugus-gamepad.py  faugus-launcher  faugus-launcher-flatpak.desktop  faugus-launcher-flatpak.py  faugus-launcher.desktop  faugus-launcher.py  faugus-proton-manager.desktop  faugus-proton-manager.pot  faugus-proton-manager.py  faugus-run.desktop  faugus-run.py  faugus-session  faugus-session.desktop  faugus-shortcut.desktop  faugus_components.py  faugus_gamepad.py  faugus_launcher.py  faugus_proton_downloader.py  faugus_proton_manager.py  faugus_run.py  faugus_shortcut  faugus_shortcut.py  flatpak-patch.sh  meson.build  meson_options.txt  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release-packages.yml  update-pot.yml
assets/: LICENSE  meson.build
data/: faugus-launcher.metainfo.xml  io.github.Faugus.faugus-launcher.desktop.in  io.github.Faugus.faugus-launcher.metainfo.xml  io.github.Faugus.faugus-launcher.shortcut.desktop.in  io.github.Faugus.faugus-proton-manager.desktop.in  io.github.Faugus.faugus-run.desktop.in  io.github.Faugus.faugus-shortcut.desktop.in  meson.build
deb_packages/: faugus-launcher-1.0-43.deb  python3-umu-launcher_1.0-1_all.deb  umu-launcher_1.0-1_all.deb
faugus/: backup.py  components.py  config_manager.py  dark_theme.py  ea_fix.py  gamepad.py  keyboard.py  language_config.py  launcher.py  meson.build  migration.py  path_manager.py  proton_downloader.py  proton_manager.py  runner.py  shortcut.py  steam_setup.py  tray_helper.py  tray_ipc.py  tray_sni.py  utils.py  xdg_migration.py
flatpak/: io.github.Faugus.faugus-launcher.desktop  io.github.Faugus.faugus-launcher.proton_manager.desktop  io.github.Faugus.faugus-launcher.run.desktop  io.github.Faugus.faugus-launcher.shortcut.desktop  patch.sh
flatpak/modules/: intltool-0.51.json  libayatana-appindicator-gtk3.json  libcanberra.json
languages/: faugus-launcher.pot  faugus-proton-manager.pot  faugus-run.pot  language-code  meson.build
languages/af/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/ar/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/de/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/el/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/es/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/fa/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/fi/: faugus-launcher.mo  faugus-launcher.po
languages/fr/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/hu/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/it/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/ja/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/ka/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/nb/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/ne/: faugus-launcher.mo  faugus-launcher.po
languages/nl/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/pl/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/pt_BR/: faugus-launcher.mo  faugus-launcher.po  faugus-launcher.pot  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po  faugus-run.pot
languages/ro/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/ru/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/sr/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/sv/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/tr/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/uk/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/zh_CN/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
languages/zh_TW/: faugus-launcher.mo  faugus-launcher.po  faugus-proton-manager.mo  faugus-proton-manager.po  faugus-run.mo  faugus-run.po
packaging/appimage/: build.sh
packaging/arch/: PKGBUILD
packaging/fedora/: faugus-launcher.spec
snap/: snapcraft.yaml
snap/command-chain/: desktop-launch-faugus-launcher
