[build-system]
build-backend = "mesonpy"
requires = ["meson-python"]

[project]
name = "faugus-launcher"
dynamic = ["version"]
dependencies = [
    "filelock",
    "pillow",
    "psutil",
    "PyGObject",
    "requests",
    "vdf",
]
requires-python = ">=3.9"
readme = "README.md"
authors = [{ name = "Faugus" }]
maintainers = [
    { name = "Faugus" },
    { name = "ToRRent1812" },
    { name = "RoGreat" },
]
description = "A simple and lightweight app for running Windows games using UMU-Launcher"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["linux", "games", "proton"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Unix Shell",
]

[project.scripts]
faugus-launcher = "faugus_launcher:main"
faugus-run = "faugus_run:main"
faugus-proton-manager = "faugus_proton_manager:main"
faugus-components = "faugus_components:main"

[project.urls]
Repository = "https://github.com/Faugus/faugus-launcher"
Issues = "https://github.com/Faugus/faugus-launcher/issues"
Changelog = "https://github.com/Faugus/faugus-launcher/releases"
