install_data(
  'faugus-banner.png',
  'faugus-notification.ogg',
)

install_data(
  'faugus-launcher.png',
  'faugus-battlenet.png',
  'faugus-ea.png',
  'faugus-epic-games.png',
  'faugus-ubisoft-connect.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '256x256' / 'apps',
)

install_data(
  'faugus-add-symbolic.svg',
  'faugus-exit-symbolic.svg',
  'faugus-kill-symbolic.svg',
  'faugus-play-symbolic.svg',
  'faugus-settings-symbolic.svg',
  'faugus-stop-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions',
)
