install_data(
  'faugus-banner.png',
  'faugus-notification.ogg',
)

install_data(
  'faugus-battlenet.png',
  'faugus-ea.png',
  'faugus-epic-games.png',
  'faugus-ubisoft-connect.png',
  'faugus-rockstar.png',
  'faugus-wargaming.png',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / '256x256' / 'apps',
)

install_data(
  'faugus-add-symbolic.svg',
  'faugus-exit-symbolic.svg',
  'faugus-kill-symbolic.svg',
  'faugus-play-symbolic.svg',
  'faugus-settings-symbolic.svg',
  'faugus-stop-symbolic.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'actions',
)

install_data(
  'faugus-launcher.svg',
  'faugus-mono.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
)

install_data(
  'faugus-launcher.svg',
  install_dir: get_option('datadir') / 'icons' / 'hicolor' / 'scalable' / 'apps',
  rename: 'io.github.Faugus.faugus-launcher.svg',
)
