py.install_sources(
  'backup.py',
  'components.py',
  'config_manager.py',
  'ea_fix.py',
  'gamepad.py',
  'keyboard.py',
  'language_config.py',
  'launcher.py',
  'path_manager.py',
  'proton_downloader.py',
  'proton_manager.py',
  'runner.py',
  'shortcut.py',
  'steam_setup.py',
  'utils.py',
  subdir: 'faugus',
)
